--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@ Hello there, awesome person!
  <body>
        <h1>I'm a header 1!</h1>
        <img src="https://avatars.githubusercontent.com/u/90527595?v=4">
+       <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
 
     Hello there, awesome person! 
   </body>
