--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ Hello there, awesome person!
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
-
-    Hello there, awesome person! 
+        
+  <li><a href="https://github.com">This is a link to GitHub!</a></li>
+   Hello there, awesome person! 
   </body>
 </html>
